removed unneccesary text from titles

--- a/html/about.html
+++ b/html/about.html
@@ -47,7 +47,8 @@
         </div>
     </nav>
     <div class="center-text">
-        <h6 style="text-align:center;">me</h6>
+        <!--        <h6 style="text-align:center;">me</h6>-->
+        <br>
         <br>
         <h4 style="text-align: center; line-height: 2">Computer Science major who loves tinkering with <b>code</b> and <b>design.</b></h4>
     </div>
