--- a/html/resume.html
+++ b/html/resume.html
@@ -46,18 +46,20 @@
             </ul>
         </div>
     </nav>
-    <h6 style="text-align:center;">my resume</h5>
-        <br>
-        <br>
-        <br>
-        <!--  TODO: Need to make it responsive -->
-        <div style="text-align:center">
-            <iframe src="https://docs.google.com/viewer?url=https://github.com/ChitlangeSahas/ChitlangeSahas.github.io/raw/master/files/Sahas%20Resume.pdf&embedded=true#view=FitH" frameborder="0" width="100%" style="max-width: 950px;" class="pdf_resume">
-            </iframe>
-        </div>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <br>
+    <br>
+    <h4 style="text-align:center; line-height: 2">an attempt to summarize my work on an A4 paper :) </h4>
+    <br>
+    <br>
+    <br>
+    <!--  TODO: Need to make it responsive -->
+    <div style="text-align:center">
+        <iframe src="https://docs.google.com/viewer?url=https://github.com/ChitlangeSahas/ChitlangeSahas.github.io/raw/master/files/Sahas%20Resume.pdf&embedded=true#view=FitH" frameborder="0" width="100%" style="max-width: 950px;" class="pdf_resume">
+        </iframe>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
