--- a/html/work.html
+++ b/html/work.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <title>Sahas Chitlange</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
 </head>
 
 <body>
@@ -49,11 +50,11 @@
     <!--    <h6 style="text-align:center;">my work</h5>-->
     <br>
     <br>
-    <h4 style="text-align:center; line-height: 2">work examples from Jobs, Internships and “Just for fun” stuff.</h4>
+    <h4 style="text-align:center; line-height: 2" class="animate__animated animate__fadeIn">work examples from Jobs, Internships and “Just for fun” stuff.</h4>
     <br>
     <br>
     <!--    <br>-->
-    <section class="gallery mx-auto max-width">
+    <section class="gallery mx-auto max-width animate__animated animate__fadeIn">
         <ol>
             <li>
                 <a href="#">
