--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Sahas Chitlange</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
 </head>
 
 <body>
@@ -46,8 +47,8 @@
             </ul>
         </div>
     </nav>
-    <h5 style="text-align:center;">Brain of an engineer, Heart of an Artist</h5>
-    <div class="box black max-width mx-auto resize_box">
+    <h5 style="text-align:center;" class="animate__animated animate__fadeIn">Brain of an engineer, Heart of an Artist</h5>
+    <div class="box black max-width mx-auto resize_box animate__animated animate__fadeIn">
         <img src="https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/sahas.jpg" width="400px" style="margin-left: 0px" class="logo_image">
         <div class="white-text typewriter-text-align" style="margin-top: 250px">
             <h1>
