added fadeIn animations.

--- a/html/resume.html
+++ b/html/resume.html
@@ -49,11 +49,10 @@
     </nav>
     <br>
     <br>
-    <h4 style="text-align:center; line-height: 2">an attempt to summarize my work on an A4 paper :) </h4>
+    <h4 style="text-align:center; line-height: 2" class="animate__animated animate__fadeIn">an attempt to summarize my work on an A4 paper :) </h4>
     <br>
     <br>
     <br>
-    <!--  TODO: Need to make it responsive -->
     <div style="text-align:center">
         <iframe src="https://docs.google.com/viewer?url=https://github.com/ChitlangeSahas/ChitlangeSahas.github.io/raw/master/files/Sahas%20Resume.pdf&embedded=true#view=FitH" frameborder="0" width="100%" style="max-width: 950px;" class="pdf_resume">
         </iframe>
