fixed flaky resume pdf load

--- a/html/resume.html
+++ b/html/resume.html
@@ -56,7 +56,7 @@
     <div style="text-align:center">
         <!-- <iframe src="https://docs.google.com/viewer?url=https://github.com/ChitlangeSahas/ChitlangeSahas.github.io/raw/master/files/Sahas%20Resume.pdf&embedded=true#view=FitH" frameborder="0" width="100%" style="max-width: 950px;" class="pdf_resume">
         </iframe> -->
-        <iframe src="../files/Sahas%20Resume.pdf#view=FitH&toolbar=0&statusbar=0" frameborder="0" width="100%" style="max-width: 950px;" class="pdf_resume">
+        <iframe src="../files/Sahas%20Resume.pdf#view=Fit&toolbar=1&statusbar=0" frameborder="0" width="100%" style="max-width: 950px;" class="pdf_resume">
         </iframe>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
