--- a/html/work.html
+++ b/html/work.html
@@ -64,9 +64,7 @@
                             <br>
                             <h4>Uniwheel</h4>
                             <br>
-                            <p>A nescius do admodum, hic ut minim multos duis do anim adipisicing nostrud legam
-                                litteris, nulla eiusmod iis eruditionem. De se duis fore dolor, ingeniis dolor
-                                offendit nescius. </p>
+                            <p>A Segway styled One-Wheel self balancing transport that is perfect for college students. One has to lean in the direction to move.</p>
                         </div>
                         <svg class="bi bi-arrow-right-short bottom_right" width="3em" height="3em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z" />
@@ -92,9 +90,7 @@
                             <br>
                             <h4>Uniwheel</h4>
                             <br>
-                            <p>A nescius do admodum, hic ut minim multos duis do anim adipisicing nostrud legam
-                                litteris, nulla eiusmod iis eruditionem. De se duis fore dolor, ingeniis dolor
-                                offendit nescius. </p>
+                            <p>A companion Android application for the self balancing UniWheel. Connects over wifi and monitors the vehicle essentials.</p>
                         </div>
                         <svg class="bi bi-arrow-right-short bottom_right" width="3em" height="3em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z" />
@@ -120,9 +116,7 @@
                             <br>
                             <h4>Game of Life: 3D</h4>
                             <br>
-                            <p>A nescius do admodum, hic ut minim multos duis do anim adipisicing nostrud legam
-                                litteris, nulla eiusmod iis eruditionem. De se duis fore dolor, ingeniis dolor
-                                offendit nescius. </p>
+                            <p>Autodesk Maya + Python to make 3D cellular automaton!</p>
                         </div>
                         <svg class="bi bi-arrow-right-short bottom_right" width="3em" height="3em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z" />
@@ -148,9 +142,7 @@
                             <br>
                             <h4>Torque</h4>
                             <br>
-                            <p>A nescius do admodum, hic ut minim multos duis do anim adipisicing nostrud legam
-                                litteris, nulla eiusmod iis eruditionem. De se duis fore dolor, ingeniis dolor
-                                offendit nescius. </p>
+                            <p> A DIY all terrain electric mountain board, controlled with a wireless remote.  </p>
                         </div>
                         <svg class="bi bi-arrow-right-short bottom_right" width="3em" height="3em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z" />
