added description for work.html page

--- a/html/work.html
+++ b/html/work.html
@@ -168,9 +168,7 @@
                             <br>
                             <h4>With U</h4>
                             <br>
-                            <p>A nescius do admodum, hic ut minim multos duis do anim adipisicing nostrud legam
-                                litteris, nulla eiusmod iis eruditionem. De se duis fore dolor, ingeniis dolor
-                                offendit nescius. </p>
+                            <p>A GPS shoe sole to track live location of loved one's. Cross your feet and the shoe will let your loved one's know! </p>
                         </div>
                         <svg class="bi bi-arrow-right-short bottom_right" width="3em" height="3em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z" />
@@ -196,9 +194,7 @@
                             <br>
                             <h4>Pi Berry</h4>
                             <br>
-                            <p>A nescius do admodum, hic ut minim multos duis do anim adipisicing nostrud legam
-                                litteris, nulla eiusmod iis eruditionem. De se duis fore dolor, ingeniis dolor
-                                offendit nescius. </p>
+                            <p>A DIY laptop using Raspberry Pi! </p>
                         </div>
                         <svg class="bi bi-arrow-right-short bottom_right" width="3em" height="3em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z" />
