--- a/html/work.html
+++ b/html/work.html
@@ -220,9 +220,7 @@
                             <br>
                             <h4>Coco-Mic</h4>
                             <br>
-                            <p>A nescius do admodum, hic ut minim multos duis do anim adipisicing nostrud legam
-                                litteris, nulla eiusmod iis eruditionem. De se duis fore dolor, ingeniis dolor
-                                offendit nescius. </p>
+                            <p>I made a MEMS Studio Mic and put it inside a coconut shell, hence the name! The quality of the audio was comparable to a 100 USD+ microphone!</p>
                         </div>
                         <svg class="bi bi-arrow-right-short bottom_right" width="3em" height="3em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z" />
@@ -248,9 +246,7 @@
                             <br>
                             <h4>Mr Engraver</h4>
                             <br>
-                            <p>A nescius do admodum, hic ut minim multos duis do anim adipisicing nostrud legam
-                                litteris, nulla eiusmod iis eruditionem. De se duis fore dolor, ingeniis dolor
-                                offendit nescius. </p>
+                            <p>A CNC Laser Engraver using Arduino loaded with GRBL firmware, stepper motors from old DVD burners! The 250mW laser diode could etch on plastic and wood. </p>
                         </div>
                         <svg class="bi bi-arrow-right-short bottom_right" width="3em" height="3em" viewBox="0 0 16 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M8.146 4.646a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.793 8 8.146 5.354a.5.5 0 0 1 0-.708z" />
