--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </ul>
         </div>
     </nav>
-    <h5 style="text-align:center;" class="animate__animated animate__fadeIn">Brain of an engineer, Heart of an Artist</h5>
+    <h5 style="text-align:center;" class="animate__animated animate__fadeIn">brain of an engineer, heart of an artist</h5>
     <div class="box black max-width mx-auto resize_box animate__animated animate__fadeIn">
         <img src="https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/sahas.jpg" width="400px" style="margin-left: 0px" class="logo_image">
         <div class="white-text typewriter-text-align" style="margin-top: 250px">
