--- a/html/project_description_template.html
+++ b/html/project_description_template.html
@@ -20,7 +20,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav" style="align-content: center;">
             <ul class="navbar-nav">
-                <li class="nav-item d-md-none">
+                <li class="nav-item d-sm-none">
                     <a class="nav-link" href="../index.html">home<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
@@ -47,7 +47,6 @@
             </ul>
         </div>
     </nav>
-    <!--    <h6 style="text-align:center;">my work</h5>-->
     <br>
     <div class="container">
         <div class="row">
