--- a/html/resume.html
+++ b/html/resume.html
@@ -20,7 +20,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav" style="align-content: center;">
             <ul class="navbar-nav">
-                <li class="nav-item d-md-none">
+                <li class="nav-item d-sm-none">
                     <a class="nav-link" href="../index.html">home<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
