--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item d-md-none">
+                <li class="nav-item d-sm-none">
                     <a class="nav-link" href="#"><b>home</b><span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
