project description template added.

--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <title>Sahas Chitlange</title>
@@ -47,17 +47,19 @@
             </ul>
         </div>
     </nav>
-    <div class="center-text">
-        <!--        <h6 style="text-align:center;">me</h6>-->
+    <div class="container">
+        <div class="center-text">
+            <!--        <h6 style="text-align:center;">me</h6>-->
+            <br>
+            <br>
+            <h4 style="text-align: center; line-height: 2" class="animate__animated animate__fadeIn">Computer Science major who loves tinkering with <b>code</b> and <b>design.</b></h4>
+        </div>
         <br>
         <br>
-        <h4 style="text-align: center; line-height: 2" class="animate__animated animate__fadeIn">Computer Science major who loves tinkering with <b>code</b> and <b>design.</b></h4>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div>
-        <img src="https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/about_me.jpg" width="500px" class="center-image animate__animated animate__fadeIn">
+        <br>
+        <div>
+            <img src="https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/about_me.jpg" width="500px" class="center-image animate__animated animate__fadeIn">
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
