added uniwheel project descrtiption

--- a/html/work.html
+++ b/html/work.html
@@ -57,7 +57,7 @@
     <section class="gallery mx-auto max-width animate__animated animate__fadeIn">
         <ol>
             <li>
-                <a href="#">
+                <a href="uniwheel.html">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>ELECTRIC UNICYCLE</h3>
