--- a/html/about.html
+++ b/html/about.html
@@ -58,7 +58,7 @@
         <br>
         <br>
         <div>
-            <img src="https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/about_me.jpg" width="500px" class="center-image animate__animated animate__fadeIn">
+            <img src="https://rawcdn.githack.com/ChitlangeSahas/ChitlangeSahas.github.io/df59a395422995dfca181a41e8d41b1f6d20b990/img/about_me.jpg" width="500px" class="center-image animate__animated animate__fadeIn">
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
