--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </nav>
     <h5 style="text-align:center;" class="animate__animated animate__fadeIn">brain of an engineer, heart of an artist</h5>
     <div class="box black max-width mx-auto resize_box animate__animated animate__fadeIn">
-        <img src="https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/sahas.jpg" width="400px" style="margin-left: 0px" class="logo_image">
+        <img src="https://rawcdn.githack.com/ChitlangeSahas/ChitlangeSahas.github.io/df59a395422995dfca181a41e8d41b1f6d20b990/img/sahas.jpg" width="400px" style="margin-left: 0px" class="logo_image">
         <div class="white-text typewriter-text-align" style="margin-top: 250px">
             <h1>
                 Sahas is interested in
