--- a/html/uniwheel.html
+++ b/html/uniwheel.html
@@ -38,7 +38,7 @@
             <ul class="navbar-nav">
                 <a class="ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#"><b>about</b></a>
+                        <a class="nav-link" href="about.html">about</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">contact</a>
@@ -47,20 +47,38 @@
             </ul>
         </div>
     </nav>
+    <br>
     <div class="container">
-        <div class="center-text">
-            <!--        <h6 style="text-align:center;">me</h6>-->
-            <br>
-            <br>
-            <h4 style="text-align: center; line-height: 2" class="animate__animated animate__fadeIn">Computer Science major who loves tinkering with <b>code</b> and <b>design.</b></h4>
-        </div>
-        <br>
-        <br>
-        <br>
-        <div>
-            <img src="https://rawcdn.githack.com/ChitlangeSahas/ChitlangeSahas.github.io/df59a395422995dfca181a41e8d41b1f6d20b990/img/about_me.jpg" width="500px" class="center-image animate__animated animate__fadeIn">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/uniwheel.png" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6">
+                <h2 class="project_title">ELECTRIC UNICYCLE</h2>
+                <br>
+                <h4>Uniwheel</h4>
+                <br>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h6>
+                <div style="margin-top: 70px; margin-bottom: 70px;">
+                    <button type="button" class="btn btn-dark">Github</button>
+                    <button type="button" class="btn btn-dark">Instructables</button>
+                    <button type="button" class="btn btn-dark">YouTube</button>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <script>
+    tippy('.hover_completed', {
+        content: "completed",
+    });
+    </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
