--- a/html/uniwheel.html
+++ b/html/uniwheel.html
@@ -51,7 +51,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="url(https://rawcdn.githack.com/ChitlangeSahas/ChitlangeSahas.github.io/df59a395422995dfca181a41e8d41b1f6d20b990/img/uniwheel.png" class="img-fluid rounded">
+                <img src="https://rawcdn.githack.com/ChitlangeSahas/ChitlangeSahas.github.io/df59a395422995dfca181a41e8d41b1f6d20b990/img/uniwheel.png" class="img-fluid rounded">
             </div>
             <div class="col-md-6">
                 <h2 class="project_title">ELECTRIC UNICYCLE</h2>
