--- a/html/uniwheel.html
+++ b/html/uniwheel.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <title>Sahas Chitlange</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://rawcdn.githack.com/ChitlangeSahas/ChitlangeSahas.github.io/eb335d0ff03f84f6af0d6c5a9f7d422fc5d33465/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
