--- a/html/uniwheel.html
+++ b/html/uniwheel.html
@@ -72,6 +72,10 @@
                 </div>
             </div>
         </div>
+        <img src="../img/uniwheel-how-it-works.svg" style="margin: 10px;">
+        <br>
+        <br>
+        <br>
     </div>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
