--- a/html/uniwheel.html
+++ b/html/uniwheel.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <img src="../img/uniwheel-how-it-works.svg" style="margin: 10px;">
+        <img src="../img/uniwheel-how-it-works.svg" style="margin-top: 10px;">
         <br>
         <br>
         <br>
