how it works svg added to unicycle.html

--- a/html/uniwheelapp.html
+++ b/html/uniwheelapp.html
@@ -52,10 +52,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="https://rawcdn.githack.com/ChitlangeSahas/ChitlangeSahas.github.io/df59a395422995dfca181a41e8d41b1f6d20b990/img/uniwheel.png" class="img-fluid rounded">
+                <img src="https://rawcdn.githack.com/ChitlangeSahas/ChitlangeSahas.github.io/df59a395422995dfca181a41e8d41b1f6d20b990/img/unicycle_app.png" class="img-fluid rounded" align="top">
             </div>
             <div class="col-md-6">
-                <h2 class="project_title">ELECTRIC UNICYCLE</h2>
+                <h2 class="project_title">ELECTRIC UNICYCLE APP</h2>
                 <br>
                 <h4>Uniwheel</h4>
                 <br>
@@ -66,14 +66,14 @@
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h6>
                 <div style="margin-top: 70px;">
-                    <a href="https://github.com/ChitlangeSahas/UniWheel" target="_black" type="button" class="btn btn-dark">Github</a>
+                    <a href="https://github.com/ChitlangeSahas/UniWheel-Android-App" type="button" class="btn btn-dark" href="https://github.com/ChitlangeSahas/UniWheel-Android-App" target="_blank">Github</a>
                     <button type="button" class="btn btn-dark" disabled>Instructables</button>
-                    <a href="https://www.youtube.com/watch?v=2MHV5OSDuBk" target="_black" type="button" class="btn btn-dark">YouTube</a>
+                    <button type="button" class="btn btn-dark" disabled>YouTube</button>
                 </div>
             </div>
         </div>
         <img src="../img/horizontal-break.svg" class="hr_break">
-        <img src="../img/uniwheel-how-it-works.svg" style="margin-top: 10px;">
+        <img src="../img/uniwheelapp-how-it-works.svg" style="margin-top: 10px;">
         <br>
         <br>
         <br>
