--- a/html/work.html
+++ b/html/work.html
@@ -84,7 +84,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://github.com/ChitlangeSahas/UniWheel-Android-App" target="_blank">
+                <a href="uniwheelapp.html">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>UNICYCLE APP</h3>
