how it works svg added to unicycle.html

--- a/html/uniwheelapp.html
+++ b/html/uniwheelapp.html
@@ -55,7 +55,7 @@
                 <img src="https://rawcdn.githack.com/ChitlangeSahas/ChitlangeSahas.github.io/df59a395422995dfca181a41e8d41b1f6d20b990/img/unicycle_app.png" class="img-fluid rounded" align="top">
             </div>
             <div class="col-md-6">
-                <h2 class="project_title">ELECTRIC UNICYCLE APP</h2>
+                <h2 class="project_title">UNICYCLE APP</h2>
                 <br>
                 <h4>Uniwheel</h4>
                 <br>
