how it works svg added to unicycle.html

--- a/html/uniwheelapp.html
+++ b/html/uniwheelapp.html
@@ -73,6 +73,7 @@
             </div>
         </div>
         <img src="../img/horizontal-break.svg" class="hr_break">
+        <h4 style="text-align: center;">simply put...</h4>
         <img src="../img/uniwheelapp-how-it-works.svg" style="margin-top: 10px;">
         <br>
         <br>
