added simply put for cellular automaton

--- a/html/work.html
+++ b/html/work.html
@@ -110,7 +110,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://github.com/ChitlangeSahas/3D-Cellular-Automata" target="_blank">
+                <a href="cellularautomaton.html">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>CELLULAR AUTOMATON</h3>
