added simply put for cellular automaton

--- a/html/cellularautomaton.html
+++ b/html/cellularautomaton.html
@@ -66,9 +66,9 @@
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h6>
                 <div style="margin-top: 70px;">
-                    <a href="https://github.com/ChitlangeSahas/3D-Cellular-Automata" type="button" class="btn btn-dark">Github</a>
+                    <a href="https://github.com/ChitlangeSahas/3D-Cellular-Automata" type="button" target="_blank" class="btn btn-dark">Github</a>
                     <button type="button" class="btn btn-dark" disabled>Instructables</button>
-                    <a href="https://www.youtube.com/watch?v=ufZecECNKAY" type="button" class="btn btn-dark">YouTube</a>
+                    <a href="https://www.youtube.com/watch?v=ufZecECNKAY" target="_blank" type="button" class="btn btn-dark">YouTube</a>
                 </div>
             </div>
         </div>
