added simply put for cellular automaton

--- a/html/work.html
+++ b/html/work.html
@@ -136,7 +136,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.instructables.com/id/Torque-the-DIY-All-Terrain-Electric-Cruizer-Board/" target="_blank">
+                <a href="torque.html" target="_blank">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>ELECTRIC SKATEBOARD</h3>
