--- a/html/work.html
+++ b/html/work.html
@@ -136,7 +136,7 @@
                 </a>
             </li>
             <li>
-                <a href="torque.html" target="_blank">
+                <a href="torque.html">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>ELECTRIC SKATEBOARD</h3>
