--- a/html/torque.html
+++ b/html/torque.html
@@ -55,9 +55,9 @@
                 <img src="../img/torque_cropped.jpg" class="img-fluid rounded" style="overflow: hidden;">
             </div>
             <div class="col-md-6">
-                <h2 class="project_title">ELECTRIC UNICYCLE</h2>
+                <h2 class="project_title">ELECTRIC SKATEBOARD</h2>
                 <br>
-                <h4>Uniwheel</h4>
+                <h4>Torque</h4>
                 <br>
                 <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
