fixed links on the work.html

--- a/html/work.html
+++ b/html/work.html
@@ -162,7 +162,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.flickr.com/photos/ocularinvasion/3479135247/" target="_blank">
+                <a href="https://www.instructables.com/id/With-U-Smart-Sole-DIY-GPS-Embedded-Smart-Shoe-Sole/" target="_blank">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>GPS SHOE SOLE</h3>
@@ -188,7 +188,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.flickr.com/photos/karloff/3964237502/" target="_blank">
+                <a href="https://www.instructables.com/id/Pi-Berry-Laptop-The-Classic-DIY-laptop/" target="_blank">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>DIY LAPTOP</h3>
