added project pages for all work.html tiles

--- a/html/withu.html
+++ b/html/withu.html
@@ -52,12 +52,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="../img/torque_cropped.jpg" class="img-fluid rounded" style="overflow: hidden;">
+                <img src="../img/withu_cropped.png" class="img-fluid rounded" style="overflow: hidden;">
             </div>
             <div class="col-md-6">
-                <h2 class="project_title">ELECTRIC SKATEBOARD</h2>
+                <h2 class="project_title">GPS SHOE SOLE</h2>
                 <br>
-                <h4>Torque</h4>
+                <h4>With U</h4>
                 <br>
                 <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -67,8 +67,8 @@
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h6>
                 <div style="margin-top: 70px;">
                     <button type="button" class="btn btn-dark" disabled>Github</button>
-                    <a href="https://www.instructables.com/id/Torque-the-DIY-All-Terrain-Electric-Cruizer-Board/" target="_black" type="button" class="btn btn-dark">Instructables</a>
-                    <a href="https://www.youtube.com/watch?v=Mg30A12fBRw" target="_black" type="button" class="btn btn-dark">YouTube</a>
+                    <a href="https://www.instructables.com/id/With-U-Smart-Sole-DIY-GPS-Embedded-Smart-Shoe-Sole/" target="_black" type="button" class="btn btn-dark">Instructables</a>
+                    <a href="https://www.youtube.com/watch?v=0ZSvsTVi-uo" target="_black" type="button" class="btn btn-dark">YouTube</a>
                 </div>
             </div>
         </div>
