--- a/html/work.html
+++ b/html/work.html
@@ -162,7 +162,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.instructables.com/id/With-U-Smart-Sole-DIY-GPS-Embedded-Smart-Shoe-Sole/" target="_blank">
+                <a href="withu.html">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>GPS SHOE SOLE</h3>
@@ -188,7 +188,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.instructables.com/id/Pi-Berry-Laptop-The-Classic-DIY-laptop/" target="_blank">
+                <a href="piberry.html">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>DIY LAPTOP</h3>
@@ -214,7 +214,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.instructables.com/id/Coco-Mic-The-DIY-Studio-Quailty-USB-Mic-MEMS-techn/" target="_blank">
+                <a href="cocomic.html">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>DIY STUDIO MIC</h3>
@@ -240,7 +240,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.instructables.com/id/MrEngraver-the-Desktop-Laser-Engraving-Machine/" target="_blank">
+                <a href="mrengraver.html">
                     <div class="show_on_hover">
                         <div class="info">
                             <h3>CNC LASER ENGRAVER</h3>
