added project pages for all work.html tiles

--- a/html/mrengraver.html
+++ b/html/mrengraver.html
@@ -52,7 +52,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="../img/cocomic_cropped.png" class="img-fluid rounded" style="overflow: hidden;">
+                <img src="../img/mrengraver_cropped.png" class="img-fluid rounded" style="overflow: hidden;">
             </div>
             <div class="col-md-6">
                 <h2 class="project_title">CNC LASER ENGRAVER</h2>
