fixed uniwheel description

--- a/html/uniwheel.html
+++ b/html/uniwheel.html
@@ -59,12 +59,7 @@
                 <br>
                 <h4>Uniwheel</h4>
                 <br>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h6>
+                <h6>Myself and a Computer Science colleague <a href="https://www.linkedin.com/in/david-judkins-475525196/" target="_blank">David</a> wanted to experiment with building a lightweight self-balancing electric vehicle, similar to hoverboards and segways.<br>We applied the <b>inverted pendulum</b> balancing techniques to keep the wheel under the user's center of gravity. Uniwheel uses leaning to drive forward and back, as well as turning.</h6>
                 <div style="margin-top: 70px;">
                     <a href="https://github.com/ChitlangeSahas/UniWheel" target="_black" type="button" class="btn btn-dark">Github</a>
                     <button type="button" class="btn btn-dark" disabled>Instructables</button>
