contact page added

--- a/html/contact.html
+++ b/html/contact.html
@@ -39,53 +39,27 @@
             <ul class="navbar-nav">
                 <a class="ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="about.html">about</a>
+                        <a class="nav-link" href="#">about</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">contact</a>
+                        <a class="nav-link" href="#"><b>contact</b></a>
                     </li>
                 </a>
             </ul>
         </div>
     </nav>
-    <br>
     <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <img src="https://raw.githubusercontent.com/ChitlangeSahas/ChitlangeSahas.github.io/master/img/cellular_automaton.jpg" class="img-fluid rounded" align="top">
-            </div>
-            <div class="col-md-6">
-                <h2 class="project_title">CELLULAR AUTOMATON</h2>
-                <br>
-                <h4>Game of life: 3D</h4>
-                <br>
-                <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h6>
-                <div style="margin-top: 70px;">
-                    <a href="https://github.com/ChitlangeSahas/3D-Cellular-Automata" type="button" target="_blank" class="btn btn-dark">Github</a>
-                    <button type="button" class="btn btn-dark" disabled>Instructables</button>
-                    <a href="https://www.youtube.com/watch?v=ufZecECNKAY" target="_blank" type="button" class="btn btn-dark">YouTube</a>
-                </div>
-            </div>
+        <div class="center-text">
+            <!--        <h6 style="text-align:center;">me</h6>-->
+            <br>
+            <br>
+            <h4 style="text-align: center; line-height: 2" class="animate__animated animate__fadeIn">say hello</h4>
         </div>
-        <img src="../img/horizontal-break.svg" class="hr_break">
-        <h4 style="text-align: center;">simply put...</h4>
-        <img src="../img/cellularautomaton-how-it-works_NA.svg" style="margin-top: 35px;">
         <br>
         <br>
         <br>
+        
     </div>
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="https://unpkg.com/tippy.js@6"></script>
-    <script>
-    tippy('.hover_completed', {
-        content: "completed",
-    });
-    </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
