--- a/html/about.html
+++ b/html/about.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="#"><b>about</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">contact</a>
+                        <a class="nav-link" href="contact">contact</a>
                     </li>
                 </a>
             </ul>
