contact page added

--- a/html/contact.html
+++ b/html/contact.html
@@ -50,15 +50,21 @@
     </nav>
     <div class="container">
         <div class="center-text">
-            <!--        <h6 style="text-align:center;">me</h6>-->
             <br>
             <br>
-            <h4 style="text-align: center; line-height: 2" class="animate__animated animate__fadeIn">say hello</h4>
+            <h4 style="text-align: center; line-height: 2" class="animate__animated animate__fadeIn">say hello, let's work together.</h4>
         </div>
         <br>
         <br>
         <br>
-        
+        <div class="row justify-content-md-center">
+            <div class="col-md-4 d-flex justify-content-center" style="align-content: center;">
+                <a href="https://www.linkedin.com/in/chitlangesahas/"><img src="../img/icons8-linkedin.svg" width="100px"></a>
+                <a href="https://github.com/ChitlangeSahas/"><img src="../img/icons8-github.svg" width="100px"></a>
+                <a href="mailto:chitlangesahas@gmail.com"><img src="../img/icons8-gmail.svg" width="100px"></a>
+            </div>
+        </div>
+        <img src="../img/horizontal-break.svg" class="hr_break">
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
