contact page added

--- a/html/contact.html
+++ b/html/contact.html
@@ -59,10 +59,10 @@
         <br>
         <div class="row justify-content-md-center">
             <div class="col-md-4 d-flex justify-content-center" style="align-content: center;">
-                <a href="https://www.linkedin.com/in/chitlangesahas/"><img src="../img/icons8-linkedin.svg" width="90px"></a>
-                <a href="https://github.com/ChitlangeSahas/"><img src="../img/icons8-github.svg" width="90px"></a>
-                <a href="mailto:chitlangesahas@gmail.com"><img src="../img/icons8-gmail.svg" width="90px"></a>
-                <a href="https://www.instagram.com/chitlangesahas/"><img src="../img/icons8-instagram.svg" width="90px"></a>
+                <a href="https://www.linkedin.com/in/chitlangesahas/" target="_blank"><img src="../img/icons8-linkedin.svg" width="90px"></a>
+                <a href="https://github.com/ChitlangeSahas/" target="_blank"><img src="../img/icons8-github.svg" width="90px"></a>
+                <a href="mailto:chitlangesahas@gmail.com" target="_blank"><img src="../img/icons8-gmail.svg" width="90px"></a>
+                <a href="https://www.instagram.com/chitlangesahas/" target="_blank"><img src="../img/icons8-instagram.svg" width="90px"></a>
             </div>
         </div>
         <img src="../img/horizontal-break.svg" class="hr_break">
