contact page added

--- a/html/contact.html
+++ b/html/contact.html
@@ -58,7 +58,7 @@
         <br>
         <br>
         <div class="row justify-content-md-center">
-            <div class="col-md-4 d-flex justify-content-center" style="align-content: center;">
+            <div class="col-md-4 d-flex justify-content-center animate__animated animate__fadeIn" style="align-content: center;">
                 <a href="https://www.linkedin.com/in/chitlangesahas/" target="_blank"><img src="../img/icons8-linkedin.svg" width="90px"></a>
                 <a href="https://github.com/ChitlangeSahas/" target="_blank"><img src="../img/icons8-github.svg" width="90px"></a>
                 <a href="mailto:chitlangesahas@gmail.com" target="_blank"><img src="../img/icons8-gmail.svg" width="90px"></a>
