simply put for torque added.

--- a/html/torque.html
+++ b/html/torque.html
@@ -72,9 +72,9 @@
                 </div>
             </div>
         </div>
-        <!-- <img src="../img/horizontal-break.svg" class="hr_break">
+        <img src="../img/horizontal-break.svg" class="hr_break">
         <h4 style="text-align: center;">simply put...</h4>
-        <img src="../img/uniwheel-how-it-works.svg" style="margin-top: 10px;"> -->
+        <img src="../img/torque-how-it-works.svg" style="margin-top: 10px;">
         <br>
         <br>
         <br>
